--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,12 @@
-You did it, Congratulations!!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>hello this is simple paragraph</p>
+    <h1>Introduction</h1>
+</body>
+</html>
